# Annex_C_Editor

./: ARCHITECTURE.md  CHANGELOG.md  README.md  VALIDAÇÕES EXTERNAS_RU2025.xlsx  VALIDAÇσES EXTERNAS_RU2025.xlsx  launch.bat
.github/workflows/: release.yml
app/: TechFormacao_Demo_2025.xlsx  demo-generate.mjs  index.html  package-lock.json  package.json  test-flows.mjs  test-python-server.mjs
app/public/schemas/: anexo-grv-3.2.14.xsd  anexo-qp-1.3.14.xsd  anexo-rfc-1.2.14.xsd  anexo-sst-2.3.14.xsd  anexo-zero-1.3.14.xsd  entity-data-1.2.14.xsd  relatorio-fest-3.2.14.xsd  relatorio-grv-3.2.14.xsd  relatorio-ips-3.2.14.xsd  relatorio-qp-3.2.14.xsd  relatorio-rfc-3.2.14.xsd  relatorio-sst-3.2.14.xsd
app/src/: App.css  App.tsx  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src/components/: ErrorBoundary.tsx  FileDropZone.tsx  ValidationReport.tsx
app/src/data/: codeTables.ts
app/src/lib/: excelParser.ts  excelTemplate.ts  validation.ts  xmlGenerator.ts  xmlParser.ts  xmlValidator.ts
app/src/workers/: excelParser.worker.ts
