[package]
name = "anexo-c-editor"
version = "1.0.0"
description = "Conversor Excel ↔ XML para o Anexo C do Relatório Único"
authors = ["N-MMA"]
license = "MIT"
repository = "https://github.com/N-MMA/Annex_C_Editor"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1" }
tauri-plugin-log = "2"
